# python-project-lvl4

./: .env_example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pyci.yml
task_manager/: mixins.py  settings.py  tests.py  urls.py  utils.py  views.py
task_manager/fixtures/: labels.json  statuses.json  task_labels.json  tasks.json  test_labels.json  test_tasks.json  test_users.json  users.json
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_models.py  test_views.py
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_models.py  test_views.py
task_manager/tasks/: filter.py  mixins.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/tasks/tests/: test_filters.py  test_models.py  test_views.py
task_manager/templates/: base.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/task_manager/: index.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  login.html  update.html
task_manager/users/: forms.py  mixins.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/tests/: test_forms.py  (+2 more)
(+2 files in other folders)
